# marking

./: .gitignore  .travis.yml  LICENSE  Marking.hs  all.js  default.nix  index.html  makefile  marking.cabal
frontend/: frontend.cabal
frontend/src/: Frontend.hs
